Ajout de l'option supprimer a mon site

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <td>ID</td><td>Nom</td><td>Prenom</td><td>Age</td><td>Solde</td>
+                        <td>ID</td><td>Nom</td><td>Prenom</td><td>Age</td><td>Solde</td><td>Action</td>
                     </tr>
                     </thead>
                     <tbody>
@@ -25,6 +25,11 @@
                         <td th:text="${p.prenom}"></td>
                         <td th:text="${p.age}"></td>
                         <td th:text="${p.solde}"></td>
+                        <td >
+                            <a onclick="return confirm('Etes vous sur ? ')" class="btn btn-danger" th:href="@{delete(id=${p.id})}">
+                                Supprimer utilisateur
+                            </a>
+                        </td>
                     </tr>
 
 
